[project]
name = "quv"
version = "0.0.3"
description = "my python tool list"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28.1"]

[project.urls]
"Source" = "https://github.com/qmaru/quv.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
module = "quv"

[project.scripts]
qping = "quv.ping.main:cli"
qtracker = "quv.tracker.main:cli"
