[project]
name = "quv"
version = "0.0.6"
description = "my python tool list"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blake3>=1.0.8",
    "httpx>=0.28.1",
]

[project.urls]
"Source" = "https://github.com/qmaru/quv.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
module = "quv"

[project.scripts]
qping = "quv.ping.main:cli"
qtracker = "quv.tracker.main:cli"
qtmdb = "quv.tmdb.main:cli"
qbox = "quv.box.main:cli"
