[project]
name = "quv"
version = "0.1.0"
description = "my python tool list"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["aiofiles>=25.1.0", "blake3>=1.0.8", "httpx>=0.28.1", "pymdp"]

[project.urls]
"Source" = "https://github.com/qmaru/quv.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
module = "quv"

[tool.uv.sources]
pymdp = { git = "https://github.com/qmaru/pymdp.git" }

[project.scripts]
qping = "quv.ping.main:cli"
qtracker = "quv.tracker.main:cli"
qtmdb = "quv.tmdb.main:cli"
qbox = "quv.box.main:cli"
qrnd = "quv.random.main:cli"
